more margin fixup: need to figure out reflowing on narrow (mobile) screens

--- a/src/CV.css
+++ b/src/CV.css
@@ -1,6 +1,7 @@
 .cv {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   max-width: 1200px;
+  min-width: 600px;
   width: 100%;
   margin: auto;
 }
