--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 body {
-  margin: 4em 5%;
+  margin: 4em 1em;
 }
 
 h1 {
